# infra_simulation

./: README.md  navifra_simulation_install.sh
turtlebot3/turtlebot3_description/urdf/: amr.urdf.xacro  amr_w_load.urdf.xacro  rectangle_amr.urdf.xacro  rectangle_amr_w_load.urdf.xacro  turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro  turtlebot3_burger_ori.gazebo.xacro  turtlebot3_burger_ori.urdf.xacro  turtlebot3_burger_w_load.urdf.xacro  turtlebot3_forklift.gazebo.xacro  turtlebot3_forklift.urdf.xacro  turtlebot3_forklift_w_load.urdf.xacro  turtlebot3_waffle.gazebo.xacro  turtlebot3_waffle.urdf.xacro  turtlebot3_waffle_pi.urdf.xacro  turtlebot3_waffle_w_load.gazebo.xacro  turtlebot3_waffle_w_load.urdf.xacro
velodyne_simulator/velodyne_description/launch/: amr.launch.xml  amr_w_load.launch.xml  example.launch  palletjack.launch.xml  palletjack_w_load.launch.xml  rectangle_amr.launch.xml  rectangle_amr_w_load.launch.xml  robot_burger.launch.xml  robot_burger_w_load.launch.xml  robot_waffle.launch.xml  robot_waffle_pi.launch.xml  robot_waffle_w_load.launch.xml  warehouse_1.launch  warehouse_1_w_loaded_robot.launch  warehouse_1_w_robot.launch  warehouse_2.launch  warehouse_2_w_robot.launch  warehouse_3.launch  warehouse_3_w_robot.launch
velodyne_simulator/velodyne_description/meshes/: kinect.dae
velodyne_simulator/velodyne_description/rviz/: example.rviz
velodyne_simulator/velodyne_description/urdf/: Iris.urdf.xacro  OS0-32.urdf.xacro  kinect.urdf.xacro  velodyne.urdf.xacro  velodyne_2.urdf.xacro  (+4 more)
velodyne_simulator/velodyne_gazebo_plugins/: package.xml
(+10 files in other folders)
