<?xml version="1.0"?>
<package format="2">
  <name>velodyne_gazebo_plugins</name>
  <version>1.0.12</version>
  <description>
    Gazebo plugin to provide simulated data from Velodyne laser scanners.
  </description>

  <license>BSD</license>
  <author>Kevin Hallenbeck</author>
  <maintainer email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</maintainer>
  <url type="website">http://wiki.ros.org/velodyne_gazebo_plugins</url>
  <url type="repository">https://bitbucket.org/dataspeedinc/velodyne_simulator</url>
  <url type="bugtracker">https://bitbucket.org/dataspeedinc/velodyne_simulator/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo</depend>
  <depend>gazebo_plugins</depend>
  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>

</package>
